# video-intelligence-and-safety-monitoring

./: CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py
backend/api/routes/: events.py  stream.py
backend/core/: config.py
backend/models/: base.py  mvit.py
backend/services/: alert.py  inference.py
backend/utils/: zone_manager.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: deployment.md
frontend/src/components/: EventLog.jsx  StatCard.jsx  VideoFeed.jsx
frontend/src/hooks/: useStream.js
frontend/src/pages/: Dashboard.jsx
scripts/: export_onnx.py
tests/unit/: test_inference.py  test_zone_manager.py
